CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES(../common)

PROJECT(im_server)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
AUX_SOURCE_DIRECTORY(../common DIR_SRCS)
ADD_EXECUTABLE(im_server ${DIR_SRCS})

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -g")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2")

ADD_DEFINITIONS(-DRECORD_LOG)
ADD_DEFINITIONS(-D__LINUX__)

TARGET_LINK_LIBRARIES(im_server hiredis)
TARGET_LINK_LIBRARIES(im_server jsoncpp)
TARGET_LINK_LIBRARIES(im_server hpf)
TARGET_LINK_LIBRARIES(im_server bytebuffer)
TARGET_LINK_LIBRARIES(im_server event)
TARGET_LINK_LIBRARIES(im_server pthread)
TARGET_LINK_LIBRARIES(im_server log4cplus)
TARGET_LINK_LIBRARIES(im_server curl)
TARGET_LINK_LIBRARIES(im_server z)
TARGET_LINK_LIBRARIES(im_server xthread)
TARGET_LINK_LIBRARIES(im_server appframe)
TARGET_LINK_LIBRARIES(im_server rt)




 
